--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -48,7 +48,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing28"
-            android:hint="@string/sign_email"
+            android:hint="@string/email"
             android:maxLines="1"
             android:onTextChanged="@{viewModel::onEmailTextChanged}"
             android:text="@{viewModel.userEmail}"
