[feat] 친구 등록 및 삭제 관련 UI와 프로세스 구현

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <dimen name="spacing28">28dp</dimen>
 
     <!-- Typography  -->
+    <dimen name="typographyDetail">12sp</dimen>
     <dimen name="typographyDescription">14sp</dimen>
     <dimen name="typographyBase">16sp</dimen>
 
