--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,15 @@
     <color name="gray_100">#EBEBEB</color>
     <color name="gray_200">#ABABAB</color>
     <color name="gray_700">#292929</color>
+
+    <!-- Lotto -->
+    <color name="green">#97C9AF</color>
+    <color name="light_pink">#E0C5DB</color>
+    <color name="strawberry_pink">#E6A2B6</color>
+    <color name="hot_pink">#CE719A</color>
+    <color name="purple">#B697C9</color>
+
+
+
+
 </resources>
