[feat] 깃허브 팔로워 및 레포지토리 목록 조회 프로세스, UI 구현

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,6 @@
     <dimen name="typographyDescription">14sp</dimen>
     <dimen name="typographyBase">16sp</dimen>
 
+    <!-- Widget -->
+    <dimen name="HeightTabItem">32dp</dimen>
 </resources>
