--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,8 @@
     <color name="gray_50">#F2F2F2</color>
     <color name="gray_100">#EBEBEB</color>
     <color name="gray_200">#ABABAB</color>
+    <color name="gray_400">#888888</color>
     <color name="gray_700">#292929</color>
+
+    <color name="black_alpha_5">#0D000000</color>
 </resources>
