[feat] user 정보 불러오기 구현

--- a/app/src/main/res/layout/activity_github.xml
+++ b/app/src/main/res/layout/activity_github.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".presentation.github.screens.GithubFragment">
+    tools:context=".presentation.github.GithubActivity">
 
     <data>
 
@@ -28,11 +28,12 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_marginTop="@dimen/spacingBase"
+                android:shapeableImageUrl="@{viewModel.userInfo.profile}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/Widget.CircleImageView.Half"
-                app:srcCompat="@drawable/img_pearl" />
+                tools:src="@drawable/img_pearl" />
 
             <TextView
                 android:id="@+id/name"
@@ -41,23 +42,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacingBase"
                 android:fontFamily="@font/suit_b"
-                android:text="최영진"
+                android:text="@{viewModel.userInfo.name}"
                 android:textColor="@color/gray_700"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/profile_image" />
+                app:layout_constraintTop_toBottomOf="@id/profile_image"
+                tools:text="youngjinc" />
 
             <TextView
+                android:id="@+id/location"
                 style="@style/Widget.Description.TextAppearance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacingMicro"
-                android:text="youngjinc"
+                android:text="@{viewModel.userInfo.location}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/name" />
+                app:layout_constraintTop_toBottomOf="@id/name"
+                tools:text="Republic of Korea" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.tabs.TabLayout
