--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -94,6 +94,11 @@
         <item name="cornerSize">5%</item>
     </style>
 
+    <style name="Widget.CircleImageView.16" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">16%</item>
+    </style>
+
     <style name="Widget.CircleImageView.Half" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
