--- a/app/src/main/res/layout/activity_thread.xml
+++ b/app/src/main/res/layout/activity_thread.xml
@@ -6,6 +6,8 @@
 
     <data>
 
+        <import type="org.sopt.anshim.presentation.types.ProgressState" />
+
         <variable
             name="viewModel"
             type="org.sopt.anshim.presentation.thread.ThreadViewModel" />
@@ -21,7 +23,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="48dp"
-            android:invisibility="@{viewModel.isLoading()}"
+            android:invisibility="@{viewModel.isLoading() == ProgressState.IN_PROGRESS}"
             android:src="@drawable/img_rabbit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +35,7 @@
             android:id="@+id/loading_lottie"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="@{viewModel.isLoading()}"
+            android:visibility="@{viewModel.isLoading() == ProgressState.IN_PROGRESS}"
             app:layout_constraintBottom_toBottomOf="@id/profile_image"
             app:layout_constraintEnd_toEndOf="@id/profile_image"
             app:layout_constraintStart_toStartOf="@id/profile_image"
