[feat] 레스토랑 정보 뷰 구현

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,9 @@
     <color name="gray_100">#EBEBEB</color>
     <color name="gray_200">#ABABAB</color>
     <color name="gray_400">#888888</color>
+    <color name="gray_600">#666666</color>
     <color name="gray_700">#292929</color>
+    <color name="gray_800">#222222</color>
 
     <color name="black_alpha_5">#0D000000</color>
 
